--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
         <img src="images/maxresdefault.jpg" alt="Нажмите" width="100"  style="display: block; width: 300px;">
 
     </div>
-
+    <button class="button-36" role="button" >
+        
+        <a href="index2.html"   style="color: #ffffff; text-decoration:none">Click</a><br />
+    
+     </button>
     <footer style=" text-align: center;
     padding: 5px;
     background-color:  #dfe9b0;
